Refactor content indexing issue #869